--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ results/
 .DS_Store
 */.DS_Store
 task*
+.idea/*
+venv
+.idea/workspace.xml
+.idea/misc.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/CUTIE.iml
