--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ gast==0.2.0
 grpcio==1.17.1
 h5py==2.9.0
 idna==2.8
-Keras-Applications==1.0.6
+Keras-Applications
 Keras-Preprocessing==1.0.5
 kiwisolver==1.0.1
 llvmlite==0.27.0
@@ -32,7 +32,7 @@ requests==2.21.0
 scipy==1.2.0
 six==1.12.0
 tensorboard==1.12.1
-tensorflow==1.12.0
+tensorflow==1.15.4
 termcolor==1.1.0
 urllib3==1.24.1
 Werkzeug==0.14.1
